--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -203,13 +203,13 @@
       text-align: center;
       font-family: 'Patrick Hand'; }
     #inicio footer .grid {
-      width: 700px;
+      width: 800px;
       margin: auto;
       margin-top: 50px;
       display: grid;
-      grid-template-columns: 1fr 2fr;
-      grid-template-rows: 250px 200px 150px 230px;
-      grid-template-areas: 'Whatsapp Whatsapp' 'Twitter Facebook' 'Youtube Facebook' 'Instagram Facebook'; }
+      grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+      grid-template-rows: 160px;
+      grid-template-areas: 'Whatsapp Twitter Facebook Instagram Youtube'; }
       #inicio footer .grid .grid1 {
         grid-area: Whatsapp; }
         #inicio footer .grid .grid1 a {
@@ -235,7 +235,7 @@
         align-items: stretch;
         justify-content: center; }
       #inicio footer .grid a {
-        color: aqua;
+        color: greenyellow;
         text-shadow: 0 0 6px black;
         font-size: 30px;
         font-family: 'Patrick Hand';
@@ -271,7 +271,7 @@
     font-size: 25px; }
   #inicio .texto1 {
     text-align: center;
-    font-size: 20px;
+    font-size: 22px;
     color: ghostwhite;
     text-shadow: 0 0 8px black;
     font-family: 'Concert One'; }
@@ -286,29 +286,28 @@
       border-spacing: 22px;
       border-radius: 25px;
       border: 5px solid greenyellow; }
-  #inicio .span1 {
-    text-align: center;
-    font-size: 25px;
-    color: #C49618;
-    font-family: 'Heebo';
-    text-shadow: 0 0 8px black; }
-  #inicio .span2 {
-    margin-bottom: 15px;
-    text-align: center;
-    font-size: 22px;
-    color: #C49618;
-    font-family: 'Heebo';
-    text-shadow: 0 0 8px black; }
   #inicio .jefe table {
     border: 4px solid greenyellow; }
+    #inicio .jefe table .span1 {
+      text-align: center;
+      font-size: 25px;
+      color: #C49618;
+      font-family: 'Heebo';
+      text-shadow: 0 0 8px black; }
+    #inicio .jefe table .span2 span {
+      margin-bottom: 15px;
+      text-align: center;
+      font-size: 25px;
+      color: #C49618;
+      font-family: 'Heebo';
+      text-shadow: 0 0 8px black; }
   #inicio .jefe p {
     color: #C7AA14;
     font-size: 15px;
     font-family: 'Mandali'; }
   #inicio .redes .grid {
-    width: 550px;
-    grid-template-rows: 180px 120px 120px 180px;
-    grid-template-areas: 'Whatsapp Whatsapp' 'Twitter Facebook' 'Youtube Facebook' 'Instagram Facebook'; }
+    width: 600px;
+    grid-template-rows: 130px; }
     #inicio .redes .grid a {
       font-size: 25px; }
   #inicio .redes h2 {
@@ -329,12 +328,12 @@
     font-size: 18px; }
   #inicio .texto1 {
     text-align: center;
-    font-size: 16px;
+    font-size: 18px;
     color: ghostwhite;
     text-shadow: 0 0 8px black;
     font-family: 'Concert One'; }
   #inicio .primeratabla {
-    font-size: 12px;
+    font-size: 14px;
     margin-bottom: 60px;
     margin-top: 60px; }
     #inicio .primeratabla table {
@@ -345,29 +344,28 @@
       border-spacing: 5px;
       border-radius: 25px;
       border: 3px solid greenyellow; }
-  #inicio .span1 {
-    text-align: center;
-    font-size: 20px;
-    color: #C49618;
-    font-family: 'Heebo';
-    text-shadow: 0 0 8px black; }
-  #inicio .span2 {
-    margin-bottom: 15px;
-    text-align: center;
-    font-size: 17px;
-    color: #C49618;
-    font-family: 'Heebo';
-    text-shadow: 0 0 8px black; }
   #inicio .jefe table {
     border: 3px solid greenyellow; }
+    #inicio .jefe table .span1 {
+      text-align: center;
+      font-size: 20px;
+      color: #C49618;
+      font-family: 'Heebo';
+      text-shadow: 0 0 8px black; }
+    #inicio .jefe table .span2 span {
+      margin-bottom: 15px;
+      text-align: center;
+      font-size: 20px;
+      color: #C49618;
+      font-family: 'Heebo';
+      text-shadow: 0 0 8px black; }
   #inicio .jefe p {
     color: #C7AA14;
     font-size: 13px;
     font-family: 'Mandali'; }
   #inicio .redes .grid {
-    width: 300px;
-    grid-template-rows: 120px 90px 90px 120px;
-    grid-template-areas: 'Whatsapp Whatsapp' 'Twitter Facebook' 'Youtube Facebook' 'Instagram Facebook'; }
+    width: 400px;
+    grid-template-rows: 100px; }
     #inicio .redes .grid a {
       font-size: 20px; }
   #inicio .redes h2 {
