--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -92,10 +92,13 @@
       width: 40%;
       min-width: 230px;
       border-radius: 30px;
-      border: 4px solid black; }
+      border: 4px solid black;
+      cursor: pointer;
+      transition: all 0.3s ease-in-out; }
       #inicio .slider img:hover {
         border-style: dashed;
-        border-color: greenyellow; }
+        border-color: greenyellow;
+        transform: scale(0.95); }
   #inicio .titulosecundario {
     text-align: center;
     font-family: 'Patrick Hand';
@@ -185,7 +188,7 @@
         font-family: 'Heebo';
         text-shadow: 0 0 8px black; }
     #inicio .jefe p {
-      color: #C7AA14;
+      color: #9BDFA2;
       font-size: 20px;
       font-family: 'Mandali'; }
     #inicio .jefe th {
@@ -382,10 +385,10 @@
   background-attachment: fixed;
   padding: 0;
   margin: 0; }
-  #contacto nav input {
-    width: 100%; }
+  #contacto nav a {
+    font-family: 'Mali'; }
   #contacto .logo {
-    background-color: #7A5537;
+    background-color: #1E6E37;
     display: flex;
     flex-wrap: wrap;
     display: flex;
@@ -415,50 +418,12 @@
   #contacto ul {
     padding: 0;
     list-style: none; }
-  #contacto nav {
-    width: 100%;
-    margin-top: 0;
-    width: 100%;
-    display: flex;
-    flex-wrap: no-wrap;
-    background-color: #38230E;
-    word-spacing: 30px;
-    font-family: 'Rubik Moonrocks';
-    font-size: 10px; }
-    #contacto nav .menuinfo input {
-      vertical-align: bottom; }
-    #contacto nav img {
-      vertical-align: bottom; }
-    #contacto nav ul {
-      width: 100%; }
-      #contacto nav ul a {
-        color: white;
-        transition-property: color;
-        transition-duration: 0.3s;
-        transition-timing-function: ease-in;
-        text-decoration: none; }
-    #contacto nav li {
-      font-size: 30px; }
-    #contacto nav .menu1 {
-      padding-left: 30px;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-evenly; }
-      #contacto nav .menu1 a:hover {
-        color: greenyellow; }
-    #contacto nav .menu2 {
-      margin-right: 30px;
-      vertical-align: middle;
-      display: flex;
-      justify-content: flex-end; }
-    #contacto nav .espaciado {
-      display: flex;
-      justify-content: space-between; }
   #contacto .titulo {
     margin-left: 10px;
     margin-right: 10px;
     text-align: center;
     margin-top: 30px;
+    margin-bottom: 30px;
     word-spacing: 15px;
     color: ghostwhite;
     font-family: 'Patrick Hand';
@@ -467,6 +432,7 @@
       padding: 0;
       margin: 0; }
     #contacto .titulo h1 {
+      font-size: 80px;
       padding: 0;
       margin: 0; }
     #contacto .titulo img {
@@ -476,11 +442,11 @@
       transition: all 0.2s ease-in-out; }
       #contacto .titulo img:hover {
         transform: scale(1.1); }
-  #contacto .datos {
+  #contacto h2 {
     margin-left: 20px;
     margin-right: 20px;
     font-family: 'Concert One';
-    font-size: 30px;
+    font-size: 35px;
     color: ghostwhite;
     text-align: center;
     text-shadow: 0 0 8px black; }
@@ -533,10 +499,10 @@
     width: 300px; }
   #contacto nav li {
     font-size: 26px; }
-  #contacto .titulo {
-    font-size: 32px; }
-  #contacto .datos {
-    font-size: 25px; }
+  #contacto .titulo h1 {
+    font-size: 65px; }
+  #contacto h2 {
+    font-size: 30px; }
   #contacto .envio {
     margin-bottom: 10px; } }
 
@@ -548,10 +514,10 @@
     width: 240px; }
   #contacto nav li {
     font-size: 20px; }
-  #contacto .titulo {
-    font-size: 27px; }
-  #contacto .datos {
-    font-size: 22px; }
+  #contacto .titulo h1 {
+    font-size: 45px; }
+  #contacto h2 {
+    font-size: 25px; }
   #contacto .telefono {
     margin-top: 10px;
     padding-top: 10px;
@@ -569,8 +535,8 @@
   background-attachment: fixed;
   padding: 0;
   margin: 0; }
-  #login nav input {
-    width: 100%; }
+  #login nav a {
+    font-family: 'Mali'; }
   #login .logo {
     background-color: #1E6E37;
     display: flex;
@@ -689,10 +655,10 @@
   background-attachment: fixed;
   padding: 0;
   margin: 0; }
-  #nosotros nav input {
-    width: 100%; }
+  #nosotros nav a {
+    font-family: 'Mali'; }
   #nosotros .logo {
-    background-color: #7A5537;
+    background-color: #1E6E37;
     display: flex;
     flex-wrap: wrap;
     display: flex;
@@ -722,49 +688,10 @@
   #nosotros ul {
     padding: 0;
     list-style: none; }
-  #nosotros nav {
-    width: 100%;
-    margin-top: 0;
-    width: 100%;
-    display: flex;
-    flex-wrap: no-wrap;
-    background-color: #38230E;
-    word-spacing: 30px;
-    font-family: 'Rubik Moonrocks';
-    font-size: 10px; }
-    #nosotros nav .menuinfo input {
-      vertical-align: bottom; }
-    #nosotros nav img {
-      vertical-align: bottom; }
-    #nosotros nav ul {
-      width: 100%; }
-      #nosotros nav ul a {
-        color: white;
-        transition-property: color;
-        transition-duration: 0.3s;
-        transition-timing-function: ease-in;
-        text-decoration: none; }
-    #nosotros nav li {
-      font-size: 30px; }
-    #nosotros nav .menu1 {
-      padding-left: 30px;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-evenly; }
-      #nosotros nav .menu1 a:hover {
-        color: greenyellow; }
-    #nosotros nav .menu2 {
-      margin-right: 30px;
-      vertical-align: middle;
-      display: flex;
-      justify-content: flex-end; }
-    #nosotros nav .espaciado {
-      display: flex;
-      justify-content: space-between; }
-  #nosotros .titulo {
+  #nosotros h1 {
     margin: 20px;
     text-align: center;
-    font-size: 40px;
+    font-size: 80px;
     font-family: 'Patrick Hand';
     color: ghostwhite;
     text-shadow: 0 0 8px black;
@@ -775,7 +702,7 @@
   from {
     color: whitesmoke; }
   to {
-    color: #F249CE; } }
+    color: #1E6E37; } }
 
 @keyframes animacion2 {
   0% {
@@ -817,6 +744,8 @@
     margin-left: 40px;
     margin-right: 30px; }
   #nosotros h2 {
+    margin-top: 30px;
+    margin-bottom: 30px;
     text-align: left;
     color: ghostwhite;
     font-family: 'Mali';
@@ -827,8 +756,10 @@
     animation-iteration-count: infinite;
     animation-direction: alternate-reverse; }
   #nosotros .parrafo {
-    color: #F8CAFD;
+    color: whitesmoke;
     font-size: 22px;
+    font-family: 'Mali';
+    font-width: bold;
     text-shadow: 0 0 8px black; }
   #nosotros .criticas {
     text-align: center;
@@ -860,7 +791,7 @@
       animation-iteration-count: infinite;
       animation-direction: alternate-reverse; }
       #nosotros .visita span a {
-        color: black; }
+        color: white; }
         #nosotros .visita span a:hover {
           color: greenyellow; }
     #nosotros .visita .ancla {
@@ -878,8 +809,10 @@
     width: 300px; }
   #nosotros nav li {
     font-size: 26px; }
-  #nosotros .titulo {
-    font-size: 35px; }
+  #nosotros h1 {
+    margin-top: 15px;
+    margin-bottom: 15px;
+    font-size: 65px; }
   #nosotros h2 {
     font-size: 35px; }
   #nosotros .parrafo {
@@ -904,8 +837,8 @@
     width: 240px; }
   #nosotros nav li {
     font-size: 20px; }
-  #nosotros .titulo {
-    font-size: 25px; }
+  #nosotros h1 {
+    font-size: 45px; }
   #nosotros h2 {
     font-size: 25px; }
   #nosotros .parrafo {
@@ -930,8 +863,8 @@
   background-attachment: fixed;
   padding: 0;
   margin: 0; }
-  #sucursales nav input {
-    width: 100%; }
+  #sucursales nav a {
+    font-family: 'Mali'; }
   #sucursales .logo {
     background-color: #1E6E37;
     display: flex;
@@ -1005,10 +938,10 @@
   background-attachment: fixed;
   padding: 0;
   margin: 0; }
-  #tienda nav input {
-    width: 100%; }
+  #tienda nav a {
+    font-family: 'Mali'; }
   #tienda .logo {
-    background-color: #7A5537;
+    background-color: #1E6E37;
     display: flex;
     flex-wrap: wrap;
     display: flex;
@@ -1038,45 +971,6 @@
   #tienda ul {
     padding: 0;
     list-style: none; }
-  #tienda nav {
-    width: 100%;
-    margin-top: 0;
-    width: 100%;
-    display: flex;
-    flex-wrap: no-wrap;
-    background-color: #38230E;
-    word-spacing: 30px;
-    font-family: 'Rubik Moonrocks';
-    font-size: 10px; }
-    #tienda nav .menuinfo input {
-      vertical-align: bottom; }
-    #tienda nav img {
-      vertical-align: bottom; }
-    #tienda nav ul {
-      width: 100%; }
-      #tienda nav ul a {
-        color: white;
-        transition-property: color;
-        transition-duration: 0.3s;
-        transition-timing-function: ease-in;
-        text-decoration: none; }
-    #tienda nav li {
-      font-size: 30px; }
-    #tienda nav .menu1 {
-      padding-left: 30px;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-evenly; }
-      #tienda nav .menu1 a:hover {
-        color: greenyellow; }
-    #tienda nav .menu2 {
-      margin-right: 30px;
-      vertical-align: middle;
-      display: flex;
-      justify-content: flex-end; }
-    #tienda nav .espaciado {
-      display: flex;
-      justify-content: space-between; }
   #tienda h1 {
     margin-top: 40px;
     margin-bottom: 40px;
@@ -1092,6 +986,8 @@
     height: 25px;
     width: 100%; }
   #tienda h2 {
+    margin-top: 40px;
+    margin-bottom: 30px;
     text-align: center;
     font-size: 45px;
     font-family: 'Mali';
@@ -1099,6 +995,7 @@
     text-shadow: 0 0 1px white;
     letter-spacing: 3px; }
   #tienda .primeratabla {
+    text-align: center;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around; }
@@ -1108,6 +1005,7 @@
       #tienda .primeratabla a:hover {
         color: greenyellow; }
   #tienda .segundatabla {
+    text-align: center;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
